deleted pages/css folder and all references from the Page.jsx files; moved the skills icons to data/allcons.js/ fixed the height background issue in dark mode

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,7 +51,7 @@ body {
   }
 .App-backImg-1-dark {
   background-image: url("./data/production/background-img/backImg-1-dark.jpg");
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 .App-backImg-2-light {
